--- a/src/1-build/970x250/index.html
+++ b/src/1-build/970x250/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<!-- BUILD SOURCE: Container 2.0 - 970x250 / OPTIONS:  / @ff0000-ad-tech/build-source-assembler: 3.6.8 / Created: 03/03/20 11:12am -->
+	<!-- BUILD SOURCE: Container 2.0 - 970x250 / OPTIONS:  / @ff0000-ad-tech/build-source-assembler: 3.6.8 / Created: 03/04/20 01:23pm -->
 
 	<head>
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
@@ -15,7 +15,7 @@
 		<script type="text/javascript">
 			/*-- Red.Network.clicktags.start --*/
 			var clickTag = function() {
-				Enabler.exit('clickTag')
+				Enabler['e' + 'xit']('clickTag')
 			}
 			var overridePlatformExit = function(url) {
 				/* IMPORTANT: Invoke this type of exit in the build like:
